# OAIP

2_sem_pioivis_lab1/: 2_sem_pioivis_lab1.sln
2sem_lab1/: 2sem_lab1.sln  example.txt  program.txt
2sem_lab3/: 2sem_lab2.sln
2sem_lab4/: 2sem_lab4.sln
2sem_lab5_queue/: 2sem_lab5_queue.sln
2sem_lab5_stack/: 2sem_lab5_stack.sln
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication10/: ConsoleApplication10.sln
ConsoleApplication11/: ConsoleApplication11.sln
ConsoleApplication12/: ConsoleApplication12.sln
ConsoleApplication13/: ConsoleApplication13.sln
ConsoleApplication14/: ConsoleApplication14.sln
ConsoleApplication15/: ConsoleApplication15.sln
ConsoleApplication16/: ConsoleApplication16.sln
ConsoleApplication17/: ConsoleApplication17.sln
ConsoleApplication18/: ConsoleApplication18.sln
ConsoleApplication19/: ConsoleApplication19.sln
ConsoleApplication2/: ConsoleApplication2.sln
ConsoleApplication20/: ConsoleApplication20.sln
ConsoleApplication21/: ConsoleApplication21.sln
ConsoleApplication22/: ConsoleApplication22.sln
ConsoleApplication23/: ConsoleApplication23.sln
ConsoleApplication24/: ConsoleApplication24.sln
ConsoleApplication25/: ConsoleApplication25.sln  desktop.ini  program.txt  program2.txt  tests.txt
ConsoleApplication26/: ConsoleApplication26.sln
ConsoleApplication27/: ConsoleApplication27.sln
ConsoleApplication28/: ConsoleApplication28.sln
ConsoleApplication29/: ConsoleApplication29.sln
ConsoleApplication3/: ConsoleApplication3.sln
cslang/cslang/: CMakeLists.txt  cslang.cpp  cslang.h
(+1145 files in other folders)
